--- a/src/assets/styles/Styles.scss
+++ b/src/assets/styles/Styles.scss
@@ -165,6 +165,7 @@ p {
 	height: 75px;
 }
 
+// Buttons
 .btn-next-back {
 	display: flex;
 	justify-content: center;
@@ -184,6 +185,34 @@ p {
 	-moz-box-shadow: 0px 2px 8px 0px #0000009c;
 	box-shadow: 0px 2px 8px 0px #0000009c;
 	outline: none;
+}
+.btn-next-mobile {
+	border-radius: 50%;
+	z-index: 1;
+	position: fixed;
+	right: 20px;
+	bottom: 50%;
+	padding: 2%;
+	background-color: $white;
+	border: none;
+	-webkit-box-shadow: 0px 2px 8px 0px #0000009c;
+	-moz-box-shadow: 0px 2px 8px 0px #0000009c;
+	box-shadow: 0px 2px 8px 0px #0000009c;
+
+}
+.btn-back-mobile {
+	border-radius: 50%;
+	z-index: 1;
+	position: fixed;
+	left: 20px;
+	bottom: 50%;
+	padding: 2%;
+	background-color: $white;
+	border: none;
+	-webkit-box-shadow: 0px 2px 8px 0px #0000009c;
+	-moz-box-shadow: 0px 2px 8px 0px #0000009c;
+	box-shadow: 0px 2px 8px 0px #0000009c;
+
 }
 
 // ---------- Header
@@ -589,6 +618,8 @@ main {
 					width: 35%;
 					color: $light-gray;
 					cursor: pointer;
+					font-size: 14px;
+          font-weight: 600;
 				}
 				.round01 {
 					display: flex;
